--- a/booksystem/pom.xml
+++ b/booksystem/pom.xml
@@ -31,7 +31,30 @@
             <classifier>jdk15</classifier>
         </dependency>
         <!-- 	JSONObject -->
-<!--        jpa mysql-->
+
+        <!--添加对shior的支持-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+        <!--添加对shior的支持-->
+
+        <!-- 添加thymeleaf整合shiro标签 依赖 -->
+        <dependency>
+            <groupId>com.github.theborakompanioni</groupId>
+            <artifactId>thymeleaf-extras-shiro</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <!-- 添加thymeleaf整合shiro标签 依赖 -->
+
+        <!--        jpa mysql-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
