完成安全控制

--- a/friday/05_friday-安全控制/friday/src/main/resources/application.yml
+++ b/friday/05_friday-安全控制/friday/src/main/resources/application.yml
@@ -26,7 +26,9 @@ spring:
     testOnReturn: false
     poolPreparedStatements: true
     maxPoolPreparedStatementPerConnectionSize: 20
-
+  security:
+    basic:
+      enabled=false: false
 mybatis:
   type-aliases-package: com.sxbang.friday.model
   mapper-locations: classpath:/mybatis-mappers/*
