--- a/friday/06_friday-基础功能/friday/src/main/resources/application.yml
+++ b/friday/06_friday-基础功能/friday/src/main/resources/application.yml
@@ -42,3 +42,11 @@ mybatis:
 
 #baseInfo
 api-url: /api
+
+logging:
+  level:
+    io:
+      swagger:
+        models:
+          parameters:
+            AbstractSerializableParameter: ERROR
