--- a/springsecuriy/dutlzn-security-parent/dutlzn-security-core/pom.xml
+++ b/springsecuriy/dutlzn-security-parent/dutlzn-security-core/pom.xml
@@ -18,17 +18,18 @@
             <version>${dutlzn-security.version}</version>
         </dependency>
 
-        <!-- spring security 启动器
+<!--        spring security 启动器-->
        <dependency>
-           <groupId>org.springframework.boot</grodddupId>
+           <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
+
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
        </dependency>
-        -->
+
 
         <!--图形验证码
         <dependency>
