--- a/springsecuriy/dutlzn-security-parent/dutlzn-security-core/pom.xml
+++ b/springsecuriy/dutlzn-security-parent/dutlzn-security-core/pom.xml
@@ -39,12 +39,13 @@
        </dependency>
 
 
-        <!--图形验证码
+<!--        图形验证码-->
         <dependency>
             <groupId>com.github.penggle</groupId>
             <artifactId>kaptcha</artifactId>
         </dependency>
-		-->
+
+
         <!--数据库依赖
         <dependency>
             <groupId>org.springframework.boot</groupId>
