登录退出g功能完成

--- a/springsecuriy/dutlzn-security-parent/dutlzn-security-core/pom.xml
+++ b/springsecuriy/dutlzn-security-parent/dutlzn-security-core/pom.xml
@@ -57,7 +57,7 @@
         </dependency>
 
 
-        <!--采用redis来管理session
+<!--        采用redis来管理session-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
@@ -66,7 +66,7 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
-        -->
+
 
         <!--解决找不到 javax.annotation.meta.When.MAYBE
         <dependency>
